--- a/src/components/ContactForm/Contact.module.css
+++ b/src/components/ContactForm/Contact.module.css
@@ -1,9 +1,3 @@
-.input {
-  width: 350px;
-  padding: 5px 15px;
-  border-radius: 4px;
-  font-size: 1.5rem;
-}
 .label {
   display: flex;
   flex-direction: column;
@@ -12,14 +6,15 @@
 }
 
 .form {
-  width: 400px;
+  max-width: 250px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 15px;
   padding: 25px;
   box-shadow: 0 0 1px 2px black;
   background-color: white;
-  margin: 50px 30px;
+  margin: 20px 30px;
 }
 .btn {
   margin: auto;
