--- a/src/components/ContactList/Contact/Contact.module.css
+++ b/src/components/ContactList/Contact/Contact.module.css
@@ -1,7 +1,11 @@
-.contacts {
+/* .contacts {
   list-style: none;
   padding: 0;
-}
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px;
+
+} */
 .contact {
   display: flex;
   align-items: center;
@@ -23,19 +27,13 @@
   }
 }
 
-.contact button {
-  background-color: #ff6347;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  padding: 5px 10px;
-  cursor: pointer;
-}
-
 .contact button:hover {
   background-color: #d43f24;
 }
 
 .icon {
   margin-right: 5px;
+}
+.number {
+  width: auto;
 }
